<resources>

    <string name="title_driver_detail">Driver Detail</string>
    <string name="action_new">New</string>
    <string name="action_clear_data">Upload and clear</string>
    <string name="title_activity_list_cleared_act">ListCleared_act</string>

    <string name="list_cleared">Your local list of drivers have been uploaded and cleared from your device\n
    Touch back to continue ..</string>
    <string name="list">List</string>
    <string name="upload">Upload</string>
    <string name="newform">New</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_driver_profile">DriverProfile</string>
    <string name="crash_toast_text">App crashed</string>
    <string name="hello_world">Hello world!</string>
    <string name="retry_internet">Please check your internet connection and try again</string>
    app_label
    <string name="app_label">Driver Profile</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="five_hundred">500</string>
    <string name="three_thousand">3000</string>
    <string name="three_thousand_five_hundred">3500</string>
    <string name="walkin">Walk-IN</string>
    <string name="referral">Referral</string>
    <string name="supervisor">CabE Supervisor</string>
    <string name="driver">Other Driver</string>
    <string name="delete_warning">Do you want to delete this photo?</string>
    <string name="submitted">Submitted</string>
    <string name="draft">Draft</string>
    <string name="no_iternet">To register a profile you need to be connected to Internet</string>
    <string name="personal_info">Personal</string>
    <string name="header">Header</string>
    <string name="driving_profile">Driving</string>
    <string name="requirement">Docs</string>
    <string name="photo">Photo</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="backout">Back out</string>
    <string name="initialpayment">Initial payment (Rs. 500)</string>
    <string name="fullpayment">Full payment (Rs. 3500)</string>
    <string name="privteverification">Private Verification</string>
    <string name="policeverification">Police Verification</string>
    <string name="backout_reason">Back Out Reason</string>
    <string name="getting_address"> Wait..getting address!</string>
    <string name="name_first">Driver First Name</string>
    <string name="name_last">Driver Last Name</string>
    <string name="age">Driver DOB</string>
    <string name="driver_address">Driver Address</string>
    <string name="pan">PAN</string>
    <string name="driver_phone_no">Driver Phone No</string>
    <string name="driver_licence_no">Driver Licence No</string>
    <string name="exp_date">Expiry Date of the TR-License</string>
    <string name="done">Done</string>
    <string name="edit">Edit</string>
    <string name="driver_photo">Driver Photo</string>
    <string name="pan_photo">PAN Card Photo</string>
    <string name="licence_photo">Licence photo</string>
    <string name="permit">Permit</string>
    <string name="permit_no">Permit No</string>
    <string name="badge">Badge</string>
    <string name="badge_no">Badge No</string>
    <string name="stay_mumbai">Since how many years are you staying in the Mumbai?</string>
    <string name="years">eg. 1990</string>
    <string name="member">Which vehicle are you driving now?</string>
    <string name="OLA">Ola</string>
    <string name="UBR">Uber</string>
    <string name="MRU">MERU</string>
    <string name="BMC">Book My Cabs</string>
    <string name="ECA">Easy Cabs</string>
    <string name="TAB">TAB Cabs</string>
    <string name="TFS">Taxi For Sure</string>
    <string name="VIR">Viira Cabs</string>
    <string name="PRI">Priyadarshini Taxi Serives</string>
    <string name="ARY">Aarya Cabs</string>
    <string name="BNY">Black &amp; Yellow</string>
    <string name="OTH">Other</string>
    <string name="nameof">Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="vehicl_no">Vehicle No</string>
    <string name="id_no">Id No</string>
    <string name="cab_needed">New cab needed?</string>
    <string name="by_whome">By Whome?</string>
    <string name="how_driver_come">How did the driver come to Cab-E?</string>
    <string name="remark">Remark</string>
    <string name="payment_amount">Payment Amount in Rs.</string>
    <string name="name_of_person">Name of Person</string>
    <string name="add_receipt">Additional Receipt</string>
    <string name="paymentstatus">Payment status</string>
    <string name="receiptnoone">Receipt No One</string>
    <string name="receiptnotwo">Receipt No Two</string>
    <string name="receiptnothree">Receipt No Three</string>
    <string name="receiptdate">Receipt Date One</string>
    <string name="receiptdateTwo">Receipt Date Two</string>
    <string name="receiptdateThree">Receipt Date Three</string>
    <string name="internal_comment">Internal Comment</string>
    <string name="temp_add">Temporary Address</string>
    <string name="per_add">Permanent Address</string>
    <string name="paid">Paid</string>
    <string name="notpaid">Not Paid</string>
    <string name="add_one">Address Line One</string>
    <string name="add_two">Address Line Two</string>
    <string name="city_town">City/Town</string>
    <string name="state">State</string>
    <string name="pincode">Pincode</string>
    <string name="landmark">Landmark</string>
    <string name="driver_aadhar_no">Aadhar Card No</string>
    <string name="aadhar_photo">Aadhar Card Photo</string>
    <string name="driver_email_id">Driver Email Id</string>
    <string name="same_address">Permanent address is same as temporary address</string>
    <string name="noprofileid">Oops! Something is wrong. Please check your internet connection also. Do you want to refresh the screen?</string>
    <string name="successfull_entered">\nDriver data entered successfully! </string>
    <string name="sync">Sync the data</string>
    <string name="wait">Please Wait...</string>
    <string name="no_iternet_to_sync">To sync the data you need to be connected to the Internet</string>
    <string name="permission_all">All permission are needed to access Location, SMS, Phone state etc.</string>
    <string name="backup">Back up Drivers</string>
    <string name="backupsummary">Upload drivers to server</string>
    <string name="restore">Restore Drivers</string>
    <string name="restoresummary">Download drivers from server</string>
    <string name="currentstatus">Everything is current</string>
    <string name="failedstatus">Synchronization of Driver failed. Please check you Internet Connection.</string>
    <string name="restorestatus">Restoreing driver is failed. Please check you Internet Connection.</string>
    <string name="select">Select</string>
    <string name="mind_changed">Changed my mind</string>
    <string name="no_document">Can not furnish Documents</string>
    <string name="other">Other</string>
    <string name="noappuserid">Oops. Something went wrong. Please check your Internet connection &amp; retry. </string>
</resources>
